# minja-lm

./: .gitignore  MODEL_CARD.md  README.md  main.py  pyproject.toml
dataset/: dataset.csv
minja_lm/: config.json  inference.py  model.py  training.py
scripts/: inference.py  inference_from_hub.py  training.py  upload_to_hub.py
src/minja_lm/: __init__.py  config.json  configuration.py  modeling.py
