[project]
name = "minja-lm"
version = "0.1.0"
description = "A minimal Japanese language model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
# "rinna/japanese-gpt2-medium" tokenizer dependencies:
# - sentencepiece
# - protobuf

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
